--- a/CRM_case.ipynb
+++ b/CRM_case.ipynb
@@ -3127,7 +3127,7 @@
     }
    ],
    "source": [
-    "print('Correlação entre as variáveis:')\n",
+    "print('Correlation between variables:')\n",
     "corr = data_p.corr()\n",
     "sns.clustermap(corr, cmap='hot_r', annot = True, figsize=(14, 14))"
    ]
@@ -3795,7 +3795,7 @@
     "\n",
     "**Math method**\n",
     "\n",
-    "*Formula that calculates the distance between a point and a line**\n",
+    "Formula that calculates the distance between a point and a line:\n",
     "\n",
     "\n",
     "\n",
