add variables description

--- a/notebook/predictive_model.ipynb
+++ b/notebook/predictive_model.ipynb
@@ -75,9 +75,14 @@
     "| NumWebVisitsMonth | number of visits to company's web site in the last month | Discrete |\n",
     "| Recency | number of days since the last purchase | Discrete |\n",
     "| Year_Birth | year of birth | Discrete |\n",
-    "| Z_CostContact | cost contact | Discrete |\n",
-    "| Z_Revenue | revenue | Discrete |\n",
-    "| ID | client identification | Discrete |\n"
+    "| ID | client identification | Discrete |\n",
+    "| Recency_cluster | cluster related to the number of days since the last purchase | Ordinal |\n",
+    "| TotalPurchases | sum of all columns related to purchasing | Discrete |\n",
+    "| Frequency_cluster | cluster related to total purchases | Ordinal |\n",
+    "| TotalAmount | sum of all columns related to amount | Discrete |\n",
+    "| Monetary_cluster | cluster related to total amount | Ordinal |\n",
+    "| Score | sum of all clusters points | Discrete |\n",
+    "| Segment | "
    ]
   },
   {
